--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Contact Us</h1>
-    <form id="contactForm" action="https://hooks.zapier.com/hooks/catch/21702658/2wtdyzu/" method="POST">
+    <form id="contactForm" action="https://hook.eu2.make.com/34kqjuwoaffx4keh2rs2zj8tabp29vkv" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
 
